--- a/gotham-client/Cargo.toml
+++ b/gotham-client/Cargo.toml
@@ -27,6 +27,10 @@ itertools = "0.8.0"
 hex = "0.3.2"
 bitcoin = "0.16.0"
 config = "0.9"
+tiny-keccak = "1.4.2"
+rustc-serialize = "0.3"
+ethereum-types = "0.4.2"
+rlp = "0.2.2"
 
 [dependencies.secp256k1]
 version = "0.12"
@@ -44,6 +48,9 @@ git = "https://github.com/KZen-networks/multi-party-ecdsa"
 [dependencies.curv]
 git = "https://github.com/KZen-networks/curv"
 features =  ["ec_secp256k1"]
+
+[dependencies.ethereum-tx-sign]
+git = "https://github.com/freehere107/ethereum-tx-sign"
 
 [patch.crates-io]
 rust-gmp = { version = "0.5.0", features = ["serde_support"], git = "https://github.com/KZen-networks/rust-gmp" }
