--- a/gotham-server/Cargo.toml
+++ b/gotham-server/Cargo.toml
@@ -15,6 +15,7 @@ path = "src/main.rs"
 [dependencies]
 rocket = "0.4.0"
 rocket_contrib = "0.4.0"
+redis = "0.10.0"
 rocksdb = "0.10.1"
 serde = "1.0"
 serde_json = "1.0"
